third_party/move/move-compiler-v2/tests/more-v1/parser/invalid_named_address_assignment.move
address Addr = 0x1; // Named address assignments are not allowed
